--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
-
+  flutter_launcher_icons: ^0.14.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -68,6 +68,20 @@ flutter:
   assets:
     - assets/
   #   - images/a_dot_ham.jpeg
+
+
+
+
+
+
+flutter_launcher_icons:
+      android: true
+      image_path: "assets/logo.png" # Path to your icon image
+     #  ios: true Set to true if you also want to generate for iOS
+      # Optional: Specify different icons for Android and iOS
+      # image_path_android: "assets/icon/android_icon.png"
+      # image_path_ios: "assets/icon/ios_icon.png"
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
