--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_secure_storage: ^9.2.1
   qr_code_scanner: ^1.0.1
   curved_navigation_bar: ^1.0.6
+  flutter_native_splash: ^2.4.6
 
 dev_dependencies:
   flutter_test:
@@ -82,6 +83,22 @@ flutter_launcher_icons:
       # image_path_android: "assets/icon/android_icon.png"
       # image_path_ios: "assets/icon/ios_icon.png"
 
+
+flutter_native_splash:
+  # The color of the splash screen background.
+  color: "#161616" # Use CustomColors.DigBlack
+  
+  # The image that will appear on the splash screen.
+  image: "assets/logo.png"
+
+  # Keep the native splash screen on-screen until your app is ready.
+  # This avoids the "white screen" flash.
+  android_12:
+    image: "assets/logo.png"
+    icon_background_color: "#161616"
+
+  # Optional: for fullscreen]
+  fullscreen: true
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
