--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_native_splash: ^2.4.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -85,18 +86,16 @@ flutter_launcher_icons:
 
 
 flutter_native_splash:
-  # The color of the splash screen background.
-  color: "#161616" # Use CustomColors.DigBlack
-  
+  # The color of the splash screen background. # Use CustomColors.DigBlack
+  color: "#271C22"
   # The image that will appear on the splash screen.
-  image: "assets/logo.png"
+  image: "assets/Untitled-2.png"
 
   # Keep the native splash screen on-screen until your app is ready.
   # This avoids the "white screen" flash.
   android_12:
-    image: "assets/logo.png"
-    icon_background_color: "#161616"
-
+    image: "assets/Untitled-2.png"
+    color: "#271C22"
   # Optional: for fullscreen]
   fullscreen: true
 
