--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,7 +89,7 @@ flutter_native_splash:
   # The color of the splash screen background. # Use CustomColors.DigBlack
   color: "#271C22"
   # The image that will appear on the splash screen.
-  image: "assets/dist_logo.png"
+  image: "assets/distlogo.png"
   
   # The branding image
   #branding: "assets/digtext1.png"
@@ -100,10 +100,10 @@ flutter_native_splash:
   # Keep the native splash screen on-screen until your app is ready.
   # This avoids the "white screen" flash.
   android_12:
-    image: "assets/dist_logo.png"
+    image: "assets/distlogo.png"
     color: "#271C22"
     #branding: "assets/digtext1.png"
-  # Optional: for fullscreen]
+  # Optional: for fullscreen
   fullscreen: true
 
   # An image asset can refer to one or more resolution-specific "variants", see
