--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,7 +78,9 @@ flutter:
 
 flutter_launcher_icons:
       android: true
-      image_path: "assets/distlogo.jpg" # Path to your icon image
+      image_path: "assets/dist_logo.png" 
+     
+      # Path to your icon image
      #  ios: true Set to true if you also want to generate for iOS
       # Optional: Specify different icons for Android and iOS
       # image_path_android: "assets/icon/android_icon.png"
