--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   qr_code_scanner: ^1.0.1
   curved_navigation_bar: ^1.0.6
   flutter_native_splash: ^2.4.6
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
