--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -55,6 +55,9 @@ dependencies {
     // Kotlin standard library
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
+    implementation "com.google.guava:guava:31.1-android"
+    implementation "javax.annotation:javax.annotation-api:1.3.2"
+
     // Core library desugaring (needed for Java 8+ APIs on lower Android versions)
     coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:2.0.4"
 }
