--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   curved_navigation_bar: ^1.0.6
   flutter_native_splash: ^2.4.6
   shared_preferences: ^2.5.3
+  restart_app: ^1.3.2
 
 dev_dependencies:
   flutter_test:
